# aoc-leaderboard-bot

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/api/: call_devschuppen_leaderboard.rs  mod.rs
src/mysql/: functions.rs
