[package]
name = "advent-of-code-leaderboard-bot"
version = "0.1.0"
authors = ["MathisBurger <handymathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9"
tokio = { version = "0.2", features = ["full", "macros"] }
reqwest = "0.10.9"
sqlx = {version = "0.4.1", features = ["mysql", "runtime-async-std-native-tls"]}
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"
